# mca-tfm-poc

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci-cd.yml  ci-pre.yml  ci-pro.yml  ci.yml  manual-cd.yml
app/: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/api/: main.py
app/api/demo/internal/: admin.py  config.py  logger.py
app/api/demo/routers/: users.py
app/internal/: config.py  logger.py
app/routers/: users.py
app/tests/acceptance/: test_find_all_users.py  test_find_one_user.py
app/tests/integration/: test_dummy.py
app/tests/unit/: test_main.py
demo/: main.py
demo/app/internal/: admin.py  config.py  logger.py
demo/app/routers/: users.py
demo/tests/acceptance/: test_find_all_users.py  test_find_one_user.py
demo/tests/integration/: test_dummy.py
demo/tests/unit/: test_main.py
scripts/: entrypoint.sh  local-setup.sh
scripts/hooks/: pre-commit
src/: main.py
src/internal/: config.py
src/routers/: users.py
tests/: test_main.py  test_users.py
tests/acceptance/: test_find_all_users.py  test_find_one_user.py
